Convert the Akonadi flags to IMAP flags in ChangeItemsFlagsTask like it's done in ChangeItemTask and handle Akonadi::MessageFlags::Replied in ResourceTask::fromAkonadiFlags().

BUG:291332
FIXED-IN: 4.11.2
REVIEW:112482